<resources>
    <string name="app_name">ChildCare</string>
    <string name="Logo">Logo</string>
    <string name="hospital">Hospital</string>
    <string name="Logo2">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Signin</string>
    <string name="logo3">Logo3</string>
    <string name="Welcome">Welcome</string>
    <string name="buttonLogout">Logout</string>
    <string name="buttonContinue">Continue</string>
    <string name="user">User</string>
    <string name="baby">baby</string>
    <string name="editTextPhone">Enter your mobile number</string>
    <string name="textView">May I ask your phone number?</string>
    <string name="Child">Add New Child</string>
    <string name="new_child">NewChild</string>
    <string name="textview">Child Information</string>
    <string name="Name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="Hospital">Hospital View</string>
    <string name="User">User View</string>
    <string name="gender">Gender</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="blood_type">Blood Type</string>
    <string name="add">Add</string>
    <string name="telephone">Telephone</string>


    <string-array name="type_Of_User">
        <item>User</item>
        <item>Hospital Employee</item>
    </string-array>

    <string-array name="hospitalList">
        <item>King Abdullah Hospital</item>
        <item> Suleiman Fakeya Hospital</item>
    </string-array>

    <string-array name="vaccinationlist">
        <item>At Birth</item>
        <item>2 Month</item>
        <item>4 Month</item>
        <item>6 Month</item>
        <item>9 Month</item>
        <item>12 Month</item>
        <item>18 Month</item>
        <item>24 Month</item>
        <item>First Primary</item>
    </string-array>

</resources>
